@@ -1,4 +1,4 @@
-# last modified 2022-05-24 by J. Fox
+# last modified 2022-06-07 by J. Fox
 
 # additions for car >= 3.0-0, started 2016-12-27
 
@@ -259,6 +259,7 @@ S3method(Anova, polr)
 S3method(Anova, rlm)
 S3method(Anova, survreg)
 S3method(Anova, svyglm)
+S3method(Anova, svycoxph)
 S3method(avPlot, lm)
 S3method(avPlot, glm)
 S3method(avPlots, default)
